# ai-resume-analyzer

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/application/use_cases/: process_documents.py  query_resumes.py  summarize_resumes.py
src/domain/entities/: audit_log.py  resume.py
src/domain/ports/: llm_port.py  log_repository_port.py  ocr_port.py
src/infrastructure/llm/: base_adapter.py  llm_factory.py  localai_adapter.py  openai_adapter.py  prompts.py
src/infrastructure/ocr/: easyocr_adapter.py  pdf_text_extractor.py
src/infrastructure/persistence/: mongo_log_repository.py
src/presentation/api/: app.py  config.py  dependencies.py
src/presentation/api/routes/: resumes.py
src/presentation/api/schemas/: request.py  response.py
src/presentation/api/services/: analyze_resumes.py
tests/: conftest.py
tests/integration/: test_resumes_endpoint.py
tests/unit/: test_analyze_resumes_service.py  test_easyocr_adapter.py  test_llm_factory.py  test_localai_adapter.py  test_mongo_log_repository.py  test_pdf_text_extractor.py  test_process_documents.py  test_query_resumes.py  test_summarize_resumes.py
